--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- Feel free to change this text here -->
 <p>
   My first Fork @Waterybell
+  Want to see the branches function @ Waterybell
 </p>
 
 </body>
